# Otus_07

./: CMakeLists.txt  bulk.cpp  bulk.h  main.cpp
.github/workflows/: realese.yaml
